home page updated

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-    <div class="root-container">
-        <h1>NASR School API</h1>
-    </div>
+    <h1>NASR School</h1>
 </body>
 
 </html>
